--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,12 @@
 {
+    "C_Cpp.autocomplete": "disabled",
+    "C_Cpp.formatting": "disabled",
+    "C_Cpp.errorSquiggles": "disabled",
+    "unreal-clangd.creation.overwrite": "partial",
+    "unreal-clangd.utility.createProjectOnStartup": false,
+    "C_Cpp.intelliSenseEngine": "disabled",
+    "unreal-clangd.creation.compilerPath": "c:\\Program Files\\LLVM\\bin\\clang-cl.exe",
+    "editor.suggest.snippetsPreventQuickSuggestions": false,
     "editor.inlayHints.enabled": "off",
     "unreal-clangd.systemIncludes.showMissingWarning": false,
     "[cpp]": {
@@ -12,5 +20,5 @@
     },
     "[hpp]": {
         "editor.insertSpaces": false,
-    }
+    },
 }
